--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -204,6 +204,7 @@ de:
       feed_title_observation: "%{name} - Meldungen für Beobachtungsflächen"
       feed_description_observation: "Diese Daten umfassen die Meldungen für Ihre GeoRSS-Beobachtungsfläche(n) in %{name}, dem Portal zur Bürgerbeteiligung"
       link: Meldung in Klarschiff ansehen
+      img_not_available: nicht vorhanden
     new:
       error: Fehler beim Versenden der Beobachtungsfläche(n)
     show_link:
