--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -259,7 +259,7 @@ de:
         no_complex_requests: Keine komplexen städtebaulichen oder verkehrsplanerischen Sachverhalte!
         no_emergencies: Keine Notfälle!
         no_personal_requests: Keine persönlichen Anfragen (z. B. Adressänderungen oder Leistungsanträge)!
-      new:
+      new: &form_labels
         confirmation: Abschluss
         confirmation_text_html: "Nach Klick auf <em>Speichern</em> erhalten Sie an die angegebene Adresse eine <strong>E-Mail,</strong> in der Sie Ihre Meldung noch einmal <strong>bestätigen</strong> müssen."
         confirmation_text_warning_html: "Wenn Sie nicht innerhalb von <strong>24 Stunden</strong> bestätigen, wird Ihre Meldung automatisch wieder <strong>gelöscht.</strong>"
@@ -285,6 +285,13 @@ de:
         what: Was?
         problem_or_idea: Melden Sie entweder ein Problem (z. B. defekte Dinge oder Verschmutzungen) oder eine Idee (z. B. neue Dinge oder Änderungswünsche).
         what_exactly: Was genau?
+      standard_form:
+        <<: *form_labels
+      campaign_form:
+        <<: *form_labels
+        step_one: Schritt 1/3
+        step_two: Schritt 2/3
+        step_three: Schritt 3/3
       show:
         actions:
           abuse: Missbrauch
