--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -292,6 +292,8 @@ de:
         step_one: Schritt 1/3
         step_two: Schritt 2/3
         step_three: Schritt 3/3
+        where: Verortung
+        what_exactly: Beschreibung
       show:
         actions:
           abuse: Missbrauch
