RSS korrigiert; verschiedenste CSS-Anpassungen, Textanpassungen und Korrekturen

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -201,11 +201,13 @@ de:
   observations:
     index:
       feed_title: "%{name}-Meldungen"
-      feed_description: "Diese Daten umfassen alle Meldungen in %{name}, dem Portal zur Bürgerbeteiligung"
+      feed_description: "Diese Daten umfassen alle Meldungen in %{name}, dem Portal zur Bürgerbeteiligung der Hansestadt Rostock"
       feed_title_observation: "%{name}-Meldungen für Beobachtungsflächen"
-      feed_description_observation: "Diese Daten umfassen die Meldungen für Ihre GeoRSS-Beobachtungsfläche(n) in %{name}, dem Portal zur Bürgerbeteiligung"
+      feed_description_observation: "Diese Daten umfassen die Meldungen für Ihre GeoRSS-Beobachtungsfläche(n) in %{name}, dem Portal zur Bürgerbeteiligung der Hansestadt Rostock"
       link: Meldung in Klarschiff.HRO ansehen
       img_not_available: nicht vorhanden
+      status_notes_not_available: nicht vorhanden
+      no_votes: bisher keine
     new:
       error: Fehler beim Versenden der Beobachtungsfläche(n)
     show_link:
