--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -321,16 +321,16 @@ de:
       what_is_it: Was kann ich in Klarschiff.HRO tun?
       what_is_it_not: Was passt nicht in Klarschiff.HRO?
       not_content: Notfälle, komplexe städtebauliche oder verkehrsplanerische Sachverhalte und persönliche Anfragen (z. B. Adressänderungen oder Leistungsanträge) können hier nicht gemeldet werden. Bitte berücksichtigen Sie, dass Ihre Meldungen öffentlich abrufbar sind.
-      newest: 'Neue Meldungen letzten Monat:'
       news: Neuigkeiten
       start_content_one: Klarschiff.HRO ist eine Plattform zum Melden von Problemen in der Infrastruktur der Hansestadt Rostock.
       start_content_two: Klarschiff.HRO will Ihnen helfen sich mit Ihrer Stadtverwaltung in Verbindung zu setzen.
       start_content_three: Wir möchten Sie ermutigen, uns Probleme und Ideen zu Ihrem lokalen Umfeld mitzuteilen und deren Bearbeitung durch uns online zu verfolgen! Versuchen Sie doch gleich Ihre erste Meldung!
       news_content_one: '03.05.2017 – Das Portal Klarschiff.HRO wurde vollständig überarbeitet: Das Erscheinungsbild ist nun zeitgemäßer, die Bedienung einfacher und die Benutzerführung intuitiver als zuvor.'
       news_content_two: '27.10.2015 – Klarschiff.HRO ist nun auch über eine Programmierschnittelle (API) ansprechbar: Somit können Apps von Drittanbietern problemlos mit dem Portal interagieren.'
-      current: 'Aktuell aktive Meldungen:'
-      overall: 'Neue Meldungen seit Start (28.03.2012):'
-      processed: 'Meldungen erledigt letzten Monat:'
+      overall: neue Meldungen seit Start (28.03.2012)
+      current: aktuell aktive Meldungen
+      newest: neue Meldungen letzten Monat
+      processed: Meldungen erledigt letzten Monat
       recent_requests: Kürzlich gemeldet
       statistics: Statistik
       subscribe_requests_feed: Meldungen als RSS-Feed abonnieren…
